Viviane_ProjetoCompiladores/src/compiler/SyntaxChecker.java
/* Generated By:JavaCC: Do not edit this line. SyntaxChecker.java */
package compiler;

public class SyntaxChecker implements SyntaxCheckerConstants {

        public static void main(String[] args) {
                try {
                        String programa = Arquivo.Read("src/codigoTeste.txt");
                        new SyntaxChecker(new java.io.StringReader(programa)).INICIO();
                        System.out.println("\u005cn\u005cnA Sintaxe Correta. Tokens Identificados.");
                }catch(Throwable e) {
                        System.out.println("\u005cn\u005cnErro na sintaxe: "+e.getMessage());
                }
        }

//Grámatica montada para a Linguagem Java
  static final public void INICIO() throws ParseException {
    Programa();
  }

  static final public void Programa() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PACKAGE:
      PacoteDeclaracao();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      ImportDeclaracao();
    }
    ClasseDeclaracao();
  }

  static final public void PacoteDeclaracao() throws ParseException {
    jj_consume_token(PACKAGE);
    jj_consume_token(IDENTIFICADOR);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONTO:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      DeclaracaoEstendida();
    }
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void ImportDeclaracao() throws ParseException {
    jj_consume_token(IMPORT);
    jj_consume_token(IDENTIFICADOR);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONTO:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      DeclaracaoEstendida();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PONTO_ASTERISCO:
      jj_consume_token(PONTO_ASTERISCO);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void DeclaracaoEstendida() throws ParseException {
    jj_consume_token(PONTO);
    jj_consume_token(IDENTIFICADOR);
  }

  static final public void ClasseDeclaracao() throws ParseException {
    Modificador();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FINAL:
      jj_consume_token(FINAL);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(AC);
    CorpoClasse();
    jj_consume_token(FC);
  }

  static final public void CorpoClasse() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC:
      case FINAL:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case INT:
      case FLOAT:
      case STRING:
      case CHAR:
      case BOOLEAN:
      case VOID:
      case IDENTIFICADOR:
      case 77:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC:
      case FINAL:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case INT:
      case FLOAT:
      case STRING:
      case CHAR:
      case BOOLEAN:
      case VOID:
      case IDENTIFICADOR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PRIVATE:
        case PROTECTED:
        case PUBLIC:
          Modificador();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC:
        case FINAL:
        case INT:
        case FLOAT:
        case STRING:
        case CHAR:
        case BOOLEAN:
        case VOID:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case STATIC:
            jj_consume_token(STATIC);
            break;
          default:
            jj_la1[8] = jj_gen;
            ;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FINAL:
            jj_consume_token(FINAL);
            break;
          default:
            jj_la1[9] = jj_gen;
            ;
          }
          TipoDeDados();
          jj_consume_token(IDENTIFICADOR);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VIRGULA:
          case PONTO_VIRGULA:
          case ATRIBUICAO:
            VariavelDeclaracao();
            break;
          case AP:
            MetodoDeclaracao();
            break;
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        case IDENTIFICADOR:
          ConstrutorDeclaracao();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case 77:
        Main();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void VariavelDeclaracao() throws ParseException {
    InicializaVariavel();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(VIRGULA);
      jj_consume_token(IDENTIFICADOR);
      InicializaVariavel();
    }
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void Parametro() throws ParseException {
    TipoDeDados();
    jj_consume_token(IDENTIFICADOR);
  }

  static final public void BlocoDeDeclaracoes() throws ParseException {
    jj_consume_token(AC);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETURN:
      case PRINT:
      case IF:
      case WHILE:
      case INT:
      case FLOAT:
      case STRING:
      case CHAR:
      case BOOLEAN:
      case VOID:
      case AP:
      case NEGACAO:
      case IDENTIFICADOR:
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      CorpoDaDeclaracao();
    }
    jj_consume_token(FC);
  }

  static final public void CorpoDaDeclaracao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case FLOAT:
    case STRING:
    case CHAR:
    case BOOLEAN:
    case VOID:
      TipoDeDados();
      jj_consume_token(IDENTIFICADOR);
      VariavelDeclaracao();
      break;
    case RETURN:
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NULL:
      case TRUE:
      case FALSE:
      case AP:
      case NEGACAO:
      case IDENTIFICADOR:
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
        OpcoesRetorno();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(PONTO_VIRGULA);
      break;
    case IF:
      If_Else();
      break;
    case PRINT:
      Print();
      break;
    case WHILE:
      While();
      break;
    case AP:
    case NEGACAO:
    case IDENTIFICADOR:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      Expressao();
      jj_consume_token(PONTO_VIRGULA);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ExpressaoLiteral() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      jj_consume_token(INTEGER_LITERAL);
      break;
    case FLOATING_POINT_LITERAL:
      jj_consume_token(FLOATING_POINT_LITERAL);
      break;
    case CHARACTER_LITERAL:
      jj_consume_token(CHARACTER_LITERAL);
      break;
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Expressao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEGACAO:
      jj_consume_token(NEGACAO);
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFICADOR:
        jj_consume_token(IDENTIFICADOR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AP:
        case INCREMENTO:
        case DECREMENTO:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case AP:
            ChamadaDeMetodo();
            break;
          case INCREMENTO:
            jj_consume_token(INCREMENTO);
            break;
          case DECREMENTO:
            jj_consume_token(DECREMENTO);
            break;
          default:
            jj_la1[19] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[20] = jj_gen;
          ;
        }
        break;
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
        ExpressaoLiteral();
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SOMA:
      case SUBTRACAO:
      case MUTIPLICACAO:
      case DIVISAO:
      case MODULO:
      case SOMA_PLUS:
      case SUBTRACAO_PLUS:
      case MULTIPLICACAO_PLUS:
      case DIVISAO_PLUS:
      case MODULO_PLUS:
      case ATRIBUICAO:
      case IGUALDADE:
      case DIFERENCA:
      case MENOR:
      case MAIOR:
      case MENOR_IGUAL:
      case MAIOR_IGUAL:
      case AND:
      case OR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ATRIBUICAO:
          Atribuicao();
          break;
        case AND:
        case OR:
          ComparacaoLogica();
          break;
        case IGUALDADE:
        case DIFERENCA:
        case MENOR:
        case MAIOR:
        case MENOR_IGUAL:
        case MAIOR_IGUAL:
          ComparacaoRelacional();
          break;
        case SOMA:
        case SUBTRACAO:
        case MUTIPLICACAO:
        case DIVISAO:
        case MODULO:
        case SOMA_PLUS:
        case SUBTRACAO_PLUS:
        case MULTIPLICACAO_PLUS:
        case DIVISAO_PLUS:
        case MODULO_PLUS:
          ExpressaoNumerica();
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      break;
    case AP:
      jj_consume_token(AP);
      Expressao();
      jj_consume_token(FP);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ChamadaDeMetodo() throws ParseException {
    jj_consume_token(AP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AP:
    case NEGACAO:
    case IDENTIFICADOR:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      ListaDeArgumentos();
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
    jj_consume_token(FP);
  }

  static final public void ListaDeArgumentos() throws ParseException {
    Expressao();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_7;
      }
      jj_consume_token(VIRGULA);
      Expressao();
    }
  }

  static final public void Atribuicao() throws ParseException {
    jj_consume_token(ATRIBUICAO);
    Expressao();
  }

  static final public void ComparacaoLogica() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      break;
    case OR:
      jj_consume_token(OR);
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expressao();
  }

  static final public void ComparacaoRelacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAIOR:
      jj_consume_token(MAIOR);
      break;
    case MENOR:
      jj_consume_token(MENOR);
      break;
    case MAIOR_IGUAL:
      jj_consume_token(MAIOR_IGUAL);
      break;
    case MENOR_IGUAL:
      jj_consume_token(MENOR_IGUAL);
      break;
    case IGUALDADE:
      jj_consume_token(IGUALDADE);
      break;
    case DIFERENCA:
      jj_consume_token(DIFERENCA);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expressao();
  }

  static final public void ExpressaoNumerica() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SOMA:
      jj_consume_token(SOMA);
      break;
    case SOMA_PLUS:
      jj_consume_token(SOMA_PLUS);
      break;
    case SUBTRACAO:
      jj_consume_token(SUBTRACAO);
      break;
    case SUBTRACAO_PLUS:
      jj_consume_token(SUBTRACAO_PLUS);
      break;
    case MUTIPLICACAO:
      jj_consume_token(MUTIPLICACAO);
      break;
    case MULTIPLICACAO_PLUS:
      jj_consume_token(MULTIPLICACAO_PLUS);
      break;
    case DIVISAO:
      jj_consume_token(DIVISAO);
      break;
    case DIVISAO_PLUS:
      jj_consume_token(DIVISAO_PLUS);
      break;
    case MODULO:
      jj_consume_token(MODULO);
      break;
    case MODULO_PLUS:
      jj_consume_token(MODULO_PLUS);
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expressao();
  }

  static final public void If_Else() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(AP);
    Expressao();
    jj_consume_token(FP);
    BlocoDeDeclaracoes();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      BlocoDeDeclaracoes();
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
  }

  static final public void Print() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(AP);
    Expressao();
    jj_consume_token(FP);
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void InicializaVariavel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIBUICAO:
      jj_consume_token(ATRIBUICAO);
      OpcoesInicializacao();
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
  }

  static final public void MetodoDeclaracao() throws ParseException {
    jj_consume_token(AP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case FLOAT:
    case STRING:
    case CHAR:
    case BOOLEAN:
    case VOID:
      ListaDeParametros();
      break;
    default:
      jj_la1[32] = jj_gen;
      ;
    }
    jj_consume_token(FP);
    BlocoDeDeclaracoes();
  }

  static final public void Main() throws ParseException {
    jj_consume_token(77);
    jj_consume_token(AP);
    jj_consume_token(STRING);
    jj_consume_token(AB);
    jj_consume_token(FB);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(FP);
    BlocoDeDeclaracoes();
  }

  static final public void ConstrutorDeclaracao() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(AP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case FLOAT:
    case STRING:
    case CHAR:
    case BOOLEAN:
    case VOID:
      ListaDeParametros();
      break;
    default:
      jj_la1[33] = jj_gen;
      ;
    }
    jj_consume_token(FP);
    BlocoDeDeclaracoes();
  }

  static final public void ListaDeParametros() throws ParseException {
    Parametro();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[34] = jj_gen;
        break label_8;
      }
      jj_consume_token(VIRGULA);
      Parametro();
    }
  }

  static final public void While() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(AP);
    Expressao();
    jj_consume_token(FP);
    BlocoDeDeclaracoes();
  }

  static final public void OpcoesInicializacao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AP:
    case NEGACAO:
    case IDENTIFICADOR:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      Expressao();
      break;
    case NULL:
      jj_consume_token(NULL);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    default:
      jj_la1[35] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void OpcoesRetorno() throws ParseException {
    OpcoesInicializacao();
  }

  static final public void Modificador() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIVATE:
      jj_consume_token(PRIVATE);
      break;
    case PROTECTED:
      jj_consume_token(PROTECTED);
      break;
    case PUBLIC:
      jj_consume_token(PUBLIC);
      break;
    default:
      jj_la1[36] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TipoDeDados() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    case CHAR:
      jj_consume_token(CHAR);
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      break;
    case VOID:
      jj_consume_token(VOID);
      break;
    default:
      jj_la1[37] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public SyntaxCheckerTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[38];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static private int[] jj_la1_2;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
      jj_la1_init_2();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2000,0x1000,0x0,0x0,0x0,0x4000000,0xfe000000,0x38000000,0x2000000,0x4000000,0x0,0xc6000000,0xfe000000,0x0,0xc00b8000,0x300800,0xc00b8000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x40000,0x0,0xc0000000,0xc0000000,0x0,0x300800,0x38000000,0xc0000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x800,0x800,0x2000,0x0,0xf,0x0,0x0,0x0,0x1001440,0xf,0xf,0x400,0x4f,0x40,0x4f,0x0,0x0,0x6000040,0x6000040,0x0,0xf9ffc000,0xf9ffc000,0x40,0x40,0x400,0x0,0xf8000000,0xffc000,0x0,0x1000000,0xf,0xf,0x400,0x40,0x0,0xf,};
   }
   private static void jj_la1_init_2() {
